Подключить HTTP-платформу и обработку отказов
